typescript/checker/tests/conformance/scanner/ecmascript5/scannerNumericLiteral2.ts.stderr
error: Legacy octal escape is not permitted in strict mode
 --> $DIR/tests/conformance/scanner/ecmascript5/scannerNumericLiteral2.ts:2:1
  |
2 | 01
  | ^^

